assets/styles/main.css
.main-view {
    width: 100%;
}

md-list-item.scientilla-main-list {
    align-items: center;
    position: relative;
    margin-bottom: 20px;
}

.scientilla-main-list > div {
    width: 600px;
}

.scientilla-secondary-list > div {
    width: 200px;
}

form[form-for] a.md-button {
    display: inline;
}

form.autosave {
    padding-left: 5px;
}
form.autosave.unsaved {
    border-left: 2px red solid;
}

form.autosave.saved {
    border-left: 2px green solid;
}

form[form-for] {
    width: 80%;
}

md-list-item {
    justify-content: flex-start !important;
}

md-tabs.notifications .md-tab.md-active {
    color: rgb(63,81,181);
}

h3 {
    font-size: 24px;
    margin-bottom: 6px;
}

i {
    font-style: italic;
}

.md-button.md-fab.scientilla-fab {
    height: 42px;
    width: 42px;
}

md-divider.top-divider {
    top: 0;
    bottom: auto;
}

